# crosswordScan

./: .dockerignore  .env  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  app.py  grid_extract.py  pyproject.toml
api/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
api/templates/: base.html  embedded_image.html  index.html
src/cws/: __init__.py  clue_extract.py  font_to_image.py  grid_extract.py  my.patterns  scanCrossword.py  scan_crossword.py  utils.py
src/cws/api/: app.py  clue.py  grid.py
src/cws/api/static/: particles.css  particles.js
src/cws/api/templates/: base.html  clue_extract.html  grid_extract.html  index.html
src/cws/resources/: __init__.py
src/cws/resources/neural_net_models/: __init__.py
src/cws_jhb123/: __init__.py  clue_extract.py  font_to_image  grid_extract.py
tests/: conftest.py  distorted_square.npy  generate_test_cases.py  test_clue_extract.py  test_grid_extract.py  two_white_squares.npy  white_square.npy
