[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cws"
version = "0.0.1"
authors = [
  { name="Joseph Briggs", email="jhbriggs23@gmail.com" },
]
description = "This package is for digitising crosswords"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
]

dependencies = [
	"matplotlib==3.5.2",
	"numpy>=1.21.5",
	"opencv-contrib-python ==4.6.0.66",
	"pytesseract==0.3.10",
  "pytest==8.0.2",
]

[project.urls]
"Homepage" = "https://github.com/jhb123/crosswordScan"
"Bug Tracker" = "https://github.com/jhb123/crosswordScan/issues"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

